# subprocess4cpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  argv_buffer.cpp  argv_buffer.h  argv_buffer_ut.cpp  check_format.py  emit_output_main.cpp  emit_output_main_mix.cpp  emit_output_main_sep.cpp  main_capture_ut.cpp  main_ut.cpp  run_build.sh  subprocess.cpp  subprocess.h  subprocess_ut.cpp
ci/docker/: Dockerfile
